fix: bugs with overflow prop

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,10 @@
-@import "src/styles/colors";
+@import 'src/styles/colors';
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Roboto Light", serif;
+  font-family: 'Roboto Light', serif;
   line-height: 1.6;
   font-size: 18px;
   height: 100%;
